--- a/ngdemo/src/app/app.component.html
+++ b/ngdemo/src/app/app.component.html
@@ -38,6 +38,8 @@
   </mat-toolbar-row>
 </mat-toolbar>
 
+<app-progress-request></app-progress-request>
+
 <mat-sidenav-container class="workspace root">
 
   <mat-sidenav id="sidenav" #sidenav mode="side" opened="false">
