--- a/ngdemo/src/app/nbufx/nbufx.component.html
+++ b/ngdemo/src/app/nbufx/nbufx.component.html
@@ -1,1 +1,2 @@
-<p>nbufx works!</p>
+<button mat-stroked-button (click)="showPrb()">Show</button>
+<button mat-stroked-button (click)="hidePrb()">Hide</button>
