Added module to show DX spot data

--- a/ngdemo/src/app/app.component.css
+++ b/ngdemo/src/app/app.component.css
@@ -62,6 +62,10 @@
   background-color: burlywood;
 }
 
+.leftmenu-item-icon {
+  margin-right: calc(var(--aloz-gap)/2);
+}
+
 .workspace.content {
   /* background-color: dimgray; */
   padding: var(--aloz-gap);
