--- a/ngdemo/src/app/app.component.html
+++ b/ngdemo/src/app/app.component.html
@@ -51,12 +51,16 @@
 
           <div>
             <a mat-raised-button class="leftmenu-item" routerLinkActive="leftmenu-item-active" (click)="sidenav.toggle()"
-               routerLink='nbufx'>NBU Foreing Exchange Rates</a>
+               routerLink='dxsummit'>
+              DX Summit realtime data
+            </a>
           </div>
 
           <div>
             <a mat-raised-button class="leftmenu-item" routerLinkActive="leftmenu-item-active" (click)="sidenav.toggle()"
-               routerLink='fm'>Fake Module</a>
+               routerLink='fm'>
+              Fake Module
+            </a>
           </div>
 
           <div>
