dxsummit css: new item color fix

--- a/ngdemo/src/app/dxsummit/dxsummit.component.css
+++ b/ngdemo/src/app/dxsummit/dxsummit.component.css
@@ -22,7 +22,7 @@ div.gap-top {
 
 @keyframes rows-animation {
   from {
-    background-color: yellow;
+    background-color: lightsalmon;
   }
 
   to {
