toolbar text is changed

--- a/ngdemo/src/app/app.component.html
+++ b/ngdemo/src/app/app.component.html
@@ -10,7 +10,7 @@
           <img src="../assets/images/logos/angular/anglogo.png" />
         </div>
       </a>
-      <div>ngular demos</div>
+      <div>ngular demo</div>
     </div>
 
     <span class="toolbar toolbar-spacer"></span>
