--- a/ngdemo/src/app/home/home.component.html
+++ b/ngdemo/src/app/home/home.component.html
@@ -1,1 +1,208 @@
-<p>home works!</p>
+<div class="top-container">
+  <h1 class="top-header">Welcome to my Angular Demo!</h1>
+  <h2 class="first-header">I have developed something during my self-education on</h2>
+  <h2 class="last-header">how to do front-end development with Angular</h2>
+  <p class="last-header-p">My beautiful 2 weeks learning path:</p>
+</div>
+
+<div class="cards-container">
+
+  <mat-card class="learning-path-card">
+    <mat-card-title>
+      1
+    </mat-card-title>
+    <mat-card-content>
+      Reading documentation:
+      <div class="reading-documentation-container">
+        <a class="reading-documentation-link" mat-raised-button href="https://angular.io" target="_blank">angular.io</a>
+        <a class="reading-documentation-link" mat-raised-button href="https://metanit.com/web/angular2/" target="_blank">metanit.com</a>
+        <a class="reading-documentation-link" mat-raised-button href="https://www.youtube.com/watch?v=IYI0em-xT28" target="_blank">Bitfumes</a>
+        <a class="reading-documentation-link" mat-raised-button href="https://www.typescriptlang.org" target="_blank">Typescript</a>
+        <a class="reading-documentation-link" mat-raised-button href="https://www.learnrxjs.io" target="_blank">RxJs</a>
+      </div>
+    </mat-card-content>
+  </mat-card>
+
+  <mat-card class="learning-path-card">
+    <mat-card-title>
+      2
+    </mat-card-title>
+    <mat-card-content>
+      Visual Studio setup for Angular development:
+      <ul>
+        <li>
+          Install Node.js
+        </li>
+        <li>
+          Install npm (Node.js Package Manager)
+        </li>
+        <li>
+          Install Angular CLI
+        </li>
+      </ul>
+    </mat-card-content>
+  </mat-card>
+
+  <mat-card class="learning-path-card">
+    <mat-card-title>
+      3
+    </mat-card-title>
+    <mat-card-content>
+      Learning Angular CLI:
+      <ul>
+        <li>ng new [project_name]</li>
+        <li>ng generage [what] [name]</li>
+        <li>ng build </li>
+        <li>...</li>
+      </ul>
+    </mat-card-content>
+  </mat-card>
+
+
+  <mat-card class="learning-path-card">
+    <mat-card-title>
+      4
+    </mat-card-title>
+    <mat-card-content>
+      Learning Angular infrastructure:
+      <ul>
+        <li>Modules</li>
+        <li>Components</li>
+        <li>Pipes</li>
+        <li>Directives</li>
+        <li>Routing</li>
+        <li>Services</li>
+        <li>Dependency injections</li>
+        <li>...</li>
+      </ul>
+    </mat-card-content>
+  </mat-card>
+
+  <mat-card class="learning-path-card">
+    <mat-card-title>
+      5
+    </mat-card-title>
+    <mat-card-content>
+      Learning Angular modules loading strategies:
+      <ul>
+        <li>Greedy</li>
+        <li>Lazy</li>
+      </ul>
+    </mat-card-content>
+  </mat-card>
+
+  <mat-card class="learning-path-card">
+    <mat-card-title>
+      6
+    </mat-card-title>
+    <mat-card-content>
+      Learning Angular development best practices:
+      <ul>
+        <li>trackBy</li>
+        <li>Modules segregation</li>
+        <li>Lazy loading</li>
+        <li>index.ts</li>
+        <li>...</li>
+      </ul>
+    </mat-card-content>
+  </mat-card>
+
+  <mat-card class="learning-path-card">
+    <mat-card-title>
+      7
+    </mat-card-title>
+    <mat-card-content>
+      Learning Angular Material UI framework, Material Icons
+      <ul>
+        <li>
+          Design what you see
+        </li>
+        <li>
+          <mat-icon>mood</mat-icon><mat-icon>mood</mat-icon><mat-icon>mood</mat-icon>
+        </li>
+      </ul>
+    </mat-card-content>
+  </mat-card>
+
+  <mat-card class="learning-path-card">
+    <mat-card-title>
+      8
+    </mat-card-title>
+    <mat-card-content>
+      Learning how to do HTTP requests with HttpClient
+    </mat-card-content>
+  </mat-card>
+
+  <mat-card class="learning-path-card">
+    <mat-card-title>
+      9
+    </mat-card-title>
+    <mat-card-content>
+      Weird CORS with HttpCLient and how to avoid it during development if possible
+      <ul>
+        <li>
+          Configure Node.js as transparent proxy (proxy.conf.json or proxy.conf.js)
+        </li>
+        <li>
+          Do HTTPS calls only
+        </li>
+        <li>
+          Server side: by HTTP headers (Access-Control-Allow-Origin, Access-Control-Expose-Headers, Upgrade-Insecure-Requests)
+        </li>
+      </ul>
+    </mat-card-content>
+  </mat-card>
+
+  <mat-card class="learning-path-card">
+    <mat-card-title>
+      10
+    </mat-card-title>
+    <mat-card-content>
+      Learning Firebase:
+      <ul>
+        <li>
+          Backend services
+        </li>
+        <li>
+          Angular application integration with Firebase
+        </li>
+        <li>
+          Deployment to the Firebase cloud hosting
+        </li>
+      </ul>
+    </mat-card-content>
+  </mat-card>
+
+  <mat-card class="learning-path-card">
+    <mat-card-title>
+      11
+    </mat-card-title>
+    <mat-card-content>
+      Learning reactive programming with RxJs:
+      <ul>
+        <li>
+          Backend services
+        </li>
+        <li>
+          Angular application integration with Firebase
+        </li>
+        <li>
+          Deployment to the Firebase cloud hosting
+        </li>
+      </ul>
+    </mat-card-content>
+  </mat-card>
+
+  <mat-card class="learning-path-card">
+    <mat-card-title>
+      12
+    </mat-card-title>
+    <mat-card-content>
+      Searching for open API to query it for the demo
+    </mat-card-content>
+  </mat-card>
+
+
+
+
+</div>
