Home module markup fix

--- a/ngdemo/src/app/home/home.component.html
+++ b/ngdemo/src/app/home/home.component.html
@@ -1,8 +1,8 @@
 <div class="top-container">
   <h1 class="top-header">Welcome to my Angular Demo!</h1>
-  <h2 class="first-header">I have developed something during my self-education on</h2>
+  <h2 class="first-header">I have developed it during my self-education on</h2>
   <h2 class="last-header">how to do front-end development with Angular</h2>
-  <p class="last-header-p">My beautiful 2 weeks learning path:</p>
+  <p class="last-header-p">it was beautiful 2 weeks learning path:</p>
 </div>
 
 <div class="cards-container">
@@ -74,6 +74,9 @@
         <li>Services</li>
         <li>Dependency injections</li>
         <li>...</li>
+        <li>angular.json</li>
+        <li>tsconfig.json</li>
+        <li>proxy.conf.json</li>
       </ul>
     </mat-card-content>
   </mat-card>
@@ -198,7 +201,7 @@
       12
     </mat-card-title>
     <mat-card-content>
-      Searching for open API to query it for the demo
+      Searching for open API to query data for the demo
     </mat-card-content>
   </mat-card>
 
