--- a/ngdemo/src/app/home/home.component.css
+++ b/ngdemo/src/app/home/home.component.css
@@ -32,13 +32,13 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  justify-content: center;
   margin: auto;
 }
 
 .learning-path-card {
   width: 30%;
-  margin-bottom: var(--aloz-gap);
+  margin: calc(var(--aloz-gap) / 2);
 }
 
 .reading-documentation-container {
