--- a/ngdemo/src/app/home/home.component.html
+++ b/ngdemo/src/app/home/home.component.html
@@ -15,7 +15,7 @@
       Reading documentation:
       <div class="reading-documentation-container">
         <a class="reading-documentation-link" mat-raised-button href="https://angular.io" target="_blank">angular.io</a>
-        <a class="reading-documentation-link" mat-raised-button href="https://metanit.com/web/angular2/" target="_blank">metanit.com</a>
+        <a class="reading-documentation-link" mat-raised-button href="https://metanit.com/web/angular2/" target="_blank">metanit</a>
         <a class="reading-documentation-link" mat-raised-button href="https://www.youtube.com/watch?v=IYI0em-xT28" target="_blank">Bitfumes</a>
         <a class="reading-documentation-link" mat-raised-button href="https://www.typescriptlang.org" target="_blank">Typescript</a>
         <a class="reading-documentation-link" mat-raised-button href="https://www.learnrxjs.io" target="_blank">RxJs</a>
@@ -74,9 +74,7 @@
         <li>Services</li>
         <li>Dependency injections</li>
         <li>...</li>
-        <li>angular.json</li>
-        <li>tsconfig.json</li>
-        <li>proxy.conf.json</li>
+        <li>Project config files</li>
       </ul>
     </mat-card-content>
   </mat-card>
@@ -144,7 +142,7 @@
       Weird CORS with HttpCLient and how to avoid it during development if possible
       <ul>
         <li>
-          Configure Node.js as transparent proxy (proxy.conf.json or proxy.conf.js)
+          Configure Node.js as transparent proxy
         </li>
         <li>
           Do HTTPS calls only
