--- a/ngdemo/src/app/home/home.component.css
+++ b/ngdemo/src/app/home/home.component.css
@@ -7,6 +7,7 @@
 
 .top-header {
   margin: auto;
+  text-align: center;
   margin-bottom: calc(var(--aloz-gap) / 2);
 }
 
@@ -17,6 +18,7 @@
 
 .last-header {
   margin: auto;
+  text-align: center;
   margin-bottom: calc(var(--aloz-gap));
 }
 
@@ -38,6 +40,7 @@
 
 .learning-path-card {
   width: 30%;
+  min-width: 150px;
   margin: calc(var(--aloz-gap) / 2);
 }
 
