Footer text color is changed

--- a/ngdemo/src/app/app.component.css
+++ b/ngdemo/src/app/app.component.css
@@ -107,7 +107,7 @@
   margin-top: auto;
   padding-right: var(--aloz-footer-margin-right);
   margin-bottom: auto;
-  color: black;
+  color: #6e7781;
   text-align: right;
   font-weight: bold;
   font-size: x-small;
