Implemented as Progressive Web Application (PWA) with updates checking

--- a/ngdemo/src/app/app.component.html
+++ b/ngdemo/src/app/app.component.html
@@ -1,3 +1,5 @@
+<app-live-update></app-live-update>
+
   <mat-toolbar color="primary" class="toolbar toolbar-fixed mat-elevation-z8">
     <mat-toolbar-row class="toolbar toolbar-row">
       <button mat-icon-button (click)="sidenav.toggle()">
@@ -5,7 +7,7 @@
       </button>
 
       <div class="toolbar container-caption">
-        <a href="/">
+        <a routerLink='/'>
           <div class="toolbar container-caption-image">
             <img src="../assets/images/logos/angular/anglogo.png" />
           </div>
