--- a/ngdemo/src/app/home/home.component.html
+++ b/ngdemo/src/app/home/home.component.html
@@ -102,6 +102,8 @@
         <li>trackBy</li>
         <li>Modules segregation</li>
         <li>Lazy loading</li>
+        <li>Progressive web application (PWA)</li>
+        <li>Detect changes, live application update</li>
         <li>index.ts</li>
         <li>...</li>
       </ul>
